# PubSubTemplate

./: .gitignore  CMakeLists.txt  README.md
include/Main/: ModuleA.hpp  ModuleB.hpp  ModuleC.hpp
include/PubSubModule/: cp_queue.hpp  inter_thread_pubsub.hpp  module.hpp  oop_observer.hpp  thread_pool.hpp
source/Main/: ModuleA.cpp  ModuleB.cpp  ModuleC.cpp  module_runner.cpp
